# openmotion-sdk

./: .gitignore  AGENTS.md  CLAUDE.md  PYPI_SETUP.md  README.md  Test_Rehab.md  pyproject.toml  requirements.txt  sbom.cdx.json
.github/workflows/: publish-pypi.yml
data-processing/: check_csv.py
data-processing/dark-drift-study/: calibration.json  findings.md  generate_plots.py  integration_proposal.md  online_estimators.md  simulate_drop_stress.py  simulate_online_estimators.py
data-processing/pdc-investigation/: findings.md
docs/: API.md  Architecture.md  ConsoleTelemetry.md  MOTION_Interface_API.md  Releasing.md  ScanDatabase-HardwareVerification.md  ScanDatabase.md  SciencePipeline.md  TestPlan.md  TestSuite.md
omotion/: Calibration.py  CalibrationWorkflow.py  CommInterface.py  Console.py  ConsoleTelemetry.py  ContactQualityWorkflow.py  CsvSink.py  FPGAProgrammer.py  MotionComposite.py  MotionConsole.py  MotionInterface.py  MotionProcessing.py  MotionSensor.py  MotionSignal.py  MotionUart.py  NvcmProgrammer.py  ScanDBSink.py  ScanDatabase.py  ScanWorkflow.py  SessionPlayback.py  Sink.py  StreamInterface.py  UartPacket.py  __init__.py  config.py  connection_monitor.py  connection_state.py  console_telemetry_conversions.py  i2c_parser.py  laser.py  signal_wrapper.py  utils.py
scripts/: capture_data.py  check_dark_schedule.py  check_odometer.py  comms_stress_test.py  disable_camera_power.py  dual_live_viewer.py  enable_camera_power.py  enter_dfu.py  flash_sensors.py  live_viewer.py  nvcm_burn_done.py  nvcm_probe.py  plot_dark_drift.py  sdk_examples.py  tec_console.py  test_console_reset.py  test_console_trigger.py  test_factory_prog.py  test_github_release.py  test_pipeline_real_scan.py  test_sensor_if.py  test_sensor_program.py  test_sensor_reset.py  test_user_config.py  validate_scan_integrity.py  visualize_scan.py
stream-db/: db_validator.py  importer.py  sensor_module_simulator.py
test_logs/: results.xml
tests/: conftest.py  test_calibration.py  test_calibration_console.py  test_calibration_procedure.py  test_calibration_workflow.py  test_calibration_workflow_compute.py  test_comm_paths.py  test_comm_transport_down.py  test_console.py  test_console_telemetry_unit.py  test_contact_quality_workflow.py  test_csv_sink.py  test_dark_integrity.py  test_db_matches_corrected_csv.py  test_errors.py  test_get_pdc_buffer.py  test_i2c_health.py  test_i2c_parser_verify.py  test_i2c_read_register.py  test_laser.py  test_motion_interface.py  test_motion_processing_shim.py  test_nvcm_programmer.py  test_pedestal_height.py  test_realtime_dark_equivalence.py  test_realtime_dark_estimator.py  test_run_collection_scan.py  test_scan_database.py  test_scan_db_sink.py  test_scan_db_sink_empty.py  test_scan_workflow.py  test_sensor.py  test_sensor_device_info_log.py  test_sequences.py  test_serial_validation.py  ykush.py
(+89 files in other folders)
