[build-system]
requires = ["setuptools>=77.0", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "openmotion-sdk"
dynamic = ["version"]
description = "Python library to communicate with STM32 for loading FPGA and camera sensors (OpenMOTION)."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "OpenwaterHealth", email = "george@openwater.health" }]

dependencies = [
  "pyserial>=3.5",
  "crcmod>=1.7",
  "numpy>=2.0,<3",
  "matplotlib>=3.8,<4",
  "pyusb>=1.3.1",
  "libusb1>=3.3.1",
  "requests>=2.32.5",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent"
]
keywords = ["stm32", "fpga", "camera", "usb", "serial", "openmotion"]

[project.optional-dependencies]
keyboard = ["keyboard>=0.13.5"]
dev = [
  "pytest>=8.0",
  "pytest-html>=4.0",
  "pytest-timeout>=2.3",
  "pytest-benchmark>=4.0",
  "hidapi>=0.14",  # tests/ykush.py — YKUSH USB hub control for HIL tests
]

[project.urls]
Repository = "https://github.com/OpenwaterHealth/openmotion-sdk"
Issues     = "https://github.com/OpenwaterHealth/openmotion-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["omotion"]
namespaces = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["**/*.bin", "**/*.json", "**/*.cfg", "**/*.txt", "**/*.dll"]
"omotion" = [
    "dfu-util/**/*",
    "dfu-util/**/dfu-util",
    "dfu-util/**/dfu-util.exe",
    "dfu-util/**/*.exe",
    "dfu-util/**/*.dll",
    "dfu-util/**/*.dylib",
    "dfu-util/**/*.a",
    "dfu-util/**/*.la",
    "models/*.csv",
    "nvcm/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not fpga and not imu'"
timeout = 30
timeout_method = "thread"
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s  %(levelname)-8s  %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"
markers = [
    "console: requires a connected console module",
    "sensor: requires at least one connected sensor module",
    "sensor_left: tests specific to the left sensor",
    "sensor_right: tests specific to the right sensor",
    "slow: takes more than 10 s",
    "destructive: modifies flash or firmware",
    "sequence: multi-step round-trip tests",
    "fpga: requires a loaded FPGA bitstream — temporarily skipped",
    "imu: exercises the IMU subsystem — temporarily skipped",
]

[tool.setuptools_scm]
# Uses tags like v1.2.3 or 1.2.3  ->  1.2.3
tag_regex = "^(?:pre-)?v?(?P<version>\\d+\\.\\d+\\.\\d+)$"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
